# TTRE_AI

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  package-lock.json  pyproject.toml  test_ml.py  tournament.py  validate.py
.github/workflows/: ci.yml
frontend/: .gitignore  package-lock.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: GameOverModal.tsx  StartMatchModal.tsx
frontend/src/components/Board/: Board.tsx  CardChoiceModal.tsx  CityMarker.tsx  EuropeMap.tsx  FaceUpCard.tsx  PlayerPanel.tsx  Route.tsx  TicketModal.tsx
frontend/src/hooks/: useGameState.ts  useWebSocket.ts
frontend/src/types/: board.ts  game.ts
frontend/src/utils/: pathfinding.ts
src/: board.py  game.py
src/api/: server.py
src/helpers/: action.py  game_state.py  player_state.py
src/ml/: __init__.py  data_collector.py  model.py  state_encoder.py  trainer.py
src/ml/first_iteration/: __init__.py  analyzer.py  imitation_trainer.py  mcts.py  mcts_trainer.py  ppo_trainer.py  state_encoder.py
src/ml/v2/: __init__.py  replay_buffer.py  state_encoder.py  trainer.py
src/ml/v3/: __init__.py  data_collector.py  game_analyzer.py  imitation_trainer.py  model.py  train_full_pipeline.py  trainer.py
src/ml/v4/: __init__.py  data_collector.py  imitation_trainer.py  model.py  run_rl.py  run_rl_stable.py  train_pipeline.py  trainer.py
src/ml/v5/: __init__.py  model.py  run_mixed.py  run_train.py  state_encoder.py  trainer.py
src/players/: __init__.py  blitz.py  greedy_routes.py  ml_player.py  overall_game.py  random_player.py  smart_ticket.py  ticket_focused.py
src/ui/: app.py
tools/: calibrate_cities.py  calibrate_routes.py  recalibrate_routes.py
