[tool.poetry]
package-mode = false

[project]
name = "ttre-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch-geometric (>=2.7.0,<3.0.0)",
    "wandb (>=0.25.0,<0.26.0)",
    "msgpack (>=1.1.2,<2.0.0)",
    "open-spiel (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
