[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
torch = { version = ">=2.6", source = "pytorch-cuda" }
torch-geometric = ">=2.7.0,<3.0.0"
wandb = ">=0.25.0,<0.26.0"
msgpack = ">=1.1.2,<2.0.0"
nicegui = ">=0.9.0,<1.0.0"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
